fixed screen flicker on page load

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -39,3 +39,26 @@ header ul{
   column-gap: 1.5rem;
   align-items: center;
 }
+
+/* loading  */
+#loading-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+}
+
+.loader {
+  border: 5px solid rgba(255, 255, 255, 0.3);
+  border-top: 5px solid #3498db;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
